@@ -1,4 +1,4 @@
-;; GCC machine description for Hitachi H8/300
+;; GCC machine description for Renesas H8/300
 ;; Copyright (C) 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000,
 ;; 2001, 2002, 2003 Free Software Foundation, Inc.
 
